slurm-1343068.out
  File "/scratch/cz2200/aib9/train_vae_equivar.py", line 182
    'edge_index': edge_index
    ^
SyntaxError: invalid syntax
